# Keel

./: .gitignore  DEFECTS.md  DEVIATIONS.md  LICENSE  README.md  keel  pyproject.toml  run.py  setup.sh
agent/: body_fetch.py  embedders.py  init.py  ledger.py  llm.py  resources.py  runtime.py  scheduler.py  store.py  topics.py
agent/setup/: benchmark.py  detect.py  installer.py
agent/sources/: hn.py  reddit.py  rss.py  url.py
agent/surface/: cli.py  renderer.py  thread.py
agent/tasks/: fetch.py  prefetch.py  reflect.py  score.py  silence.py  surface.py
agent/vault/: session.py  vault.py
config/: config.yaml.example  preferences.yaml.example  sources.yaml.example
core/: __init__.py  models.py
core/expansion/: expander.py  mood.py
core/identity/: model.py  store.py  updater.py
core/scoring/: challenger.py  embedder.py  scorer.py
core/sources/: protocol.py
docs/: hardware.md  spec-v1.md  systemd.md  todo.md
migrations/: 001_initial.sql  002_body_status.sql
tests/: conftest.py
tests/agent/: test_e2e.py
tests/core/: test_challenger.py  test_decay.py  test_scorer.py
tests/mocks/: embedder.py  llm.py  store.py
